Adjust top-area image width to prevent text overlap

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -80,7 +80,7 @@ a:hover {cursor: pointer;}
 /* Images */
 img { width: 100%;}
 .left-nav img { height: 1.5rem; width: auto; }
-.top-area-image img { width:70%;}
+
 
 
 
@@ -123,7 +123,7 @@ main {
 .top-area-text > div {margin-bottom: 2.5rem;}
 .top-area-text > div:last-child {margin-bottom: 1.3rem;}
 
-.top-area-image img { width: 120%; }
+.top-area-image img { width: 100%; }
 
 .main-content-area {margin-top: 15rem;}
 
